--- a/src/styles/night/Header.module.css
+++ b/src/styles/night/Header.module.css
@@ -109,14 +109,12 @@
 /* Transition Line
 ––––––––––––––––––––––––––––––––––––––––––––––––––*/
 .verticalContainer {
-    position: relative;
-    top: 0%;
-    left: 25%;
+    margin-left: 5%;
 }
 
 @media only screen and (min-width: 1366px) {
     .verticalContainer {
-        left: 50%;
+        margin-left: 50%;
     }
 }
 
